--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_a.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_a.html
@@ -152,6 +152,15 @@
 			.mui-backdrop {
 				background-color: black;
 			}
+
+			.video-time {
+				/*视频时间*/
+				position: absolute;
+				color: white;
+				right: 52%;
+				visibility: hidden;
+				bottom: 20px;
+			}
 		</style>
 	</head>
 
@@ -435,6 +444,7 @@
 				} else if(data.EncType == 2) { //视频
 					var play_width = 55;
 					var html_0 = '<div class="record-video">\
+								<div id="video_time_' + data.TabId + '" class="video-time">' + data.EncLen + '\'\'</div>\
 								<img id="video_play_' + data.TabId + '" style="width:' + play_width + 'px;height:' + play_width + 'px;" class="video-play" onload="videoThumbLoad(this);" src="../../image/utils/playvideo.png" />\
 								<img id="video_thumb_' + data.TabId + '" class="video-thumb" src="' + data.EncImgAddr + '" onload="videoThumbLoad(this);" onerror="videoThumbError(this);">\
 							</div>';
@@ -629,7 +639,7 @@
 					img_a = document.getElementById("video_play_" + ids[2]);
 				}
 				if(img.getAttribute('data-load') && img_a.getAttribute('data-load')) {
-					ShowVideoUtil.videoThumbLoad(document.getElementById("video_thumb_" + ids[2]), document.getElementById("video_play_" + ids[2]));
+					ShowVideoUtil.videoThumbLoad(document.getElementById("video_thumb_" + ids[2]), document.getElementById("video_play_" + ids[2]), 0, document.getElementById("video_time_" + ids[2]));
 				}
 			}
 
