0006175: 班级空间中图片大小修改

--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -69,7 +69,7 @@
 		<script src="../../js/publicProtocol.js"></script>
 		<!--图片预览js-->
 		<script src="../../js/mui.zoom.js"></script>
-		<script src="../../js/mui.previewimage.js"></script>
+		<script src="../../js/utils/all-preview.js"></script>
 		<!--<script src="../../js/utils/h5fresh.js"></script>-->
 		<script src="../../js/utils/video.js"></script>
 		<script src="../../js/mui.pullToRefresh.js"></script>
