调整展现详情界面 调整老师和学生作业详情界面

--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -70,7 +70,7 @@
 							<hr id="hr" style="height:1px;border:none;border-top:1px solid #ededed;" />
 						</div>
 						<div class="mui-media-body">
-							<p id="homeWorkContent" style="color: #b7b7b7;font-size: 15px;margin-bottom: 5px;"></p>
+							<p id="homeWorkContent" style="color: #323232;font-size: 15px;margin-bottom: 5px;"></p>
 							<div id="brief-imgs" class="brief-imgs"></div>
 							
 						</div>
@@ -78,14 +78,14 @@
 					<li id="stuHomework" class="mui-table-view-divider divider-color">学生答案</li>
 					<li id="stuCell" class="mui-table-view-cell">
 						<div class="mui-media-body">
-							<font id="stuResult" class="cell-color"></font>
+							<font id="stuResult" class="cell-color" style="font-size: 15px;color: #323232;"></font>
 							<div id="brief-imgs-stu" class="brief-imgs"></div>
 						</div>
 					</li>
 					<li id="comment" class="mui-table-view-divider divider-color">作业评语</li>
 					<li class="mui-table-view-cell">
 						<div class="mui-media-body" style="min-height: 50px;">
-							<font id="commentContent" class="cell-color"></font>
+							<font id="commentContent" class="cell-color"  style="font-size: 15px;color: #323232;"></font>
 						</div>
 					</li>
 				</ul>
