--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -67,6 +67,7 @@
 		<script src="../../js/utils/events.js"></script>
 		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/libs/jquery.lazyload.min.js"></script>
 		<!--图片预览js-->
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/utils/all-preview.js"></script>
