--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -163,7 +163,7 @@
 			<a class="mui-icon img-icon"><img src="../../image/utils/default_personalimage.png" style="width: 30px;height: 30px;border-radius: 50%;" /></a>
 
 			<h1 class="mui-title">云盘</h1>
-			<a id="add" class="mui-icon iconfont icon-jiahao mui-pull-right mui-icon-plusempty" style="font-size: 15px;margin-top:5px ;margin-right:-5px"></a>
+			<a id="add" class="mui-icon iconfont icon-jiahao mui-pull-right mui-icon-plusempty" style="font-size: 15px;margin-top:5px ;margin-right:-5px"  href="#topPopover"></a>
 			<a class="mui-icon iconfont icon-iconhexinhuiyuan mui-pull-right" style="margin-right: 5px;display: none;"></a>
 		</header>
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper" style="visibility:hidden ;z-index:0">
@@ -385,9 +385,9 @@
 
 				//				events.preload("../homework/homework-tea.html", 300);
 				events.preload('storage_transport.html'); //预加载传输列表
-				events.addTap('add', function() {
-					mui('#topPopover').popover('toggle')
-				})
+//				events.addTap('add', function() {
+//					mui('#topPopover').popover('toggle')
+//				})
 				//监听popover的显示和隐藏
 				window.addEventListener("topPopover", function(e) {
 					mui('#topPopover').popover('hide')
